--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 3.12)
 
 # project(LoRa_pico_lib)
 
-add_library(LoRa_pico_lib LoRa-pico.cpp LoRa-pico.h)
+add_library(LoRa_pico_lib LoRa-RP2040.cpp LoRa-RP2040.h)
 add_library(LoRa_print Print.h Print.cpp)
 
 target_link_libraries(LoRa_pico_lib pico_stdlib hardware_spi hardware_interp LoRa_print)
