CAD detection complete

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.12)
 # Pull in SDK (must be before project)
 
 add_subdirectory(LoRaReceiver)
+add_subdirectory(LoRaCAD)
 add_subdirectory(LoRaSender)
 add_subdirectory(LoRaDumpRegisters)
 add_subdirectory(LoRaDuplex)
